--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -77,23 +77,32 @@
 
       .user {
         padding: 0 27px 0 59px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-family: Poppins, sans-serif;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 14px;
-        line-height: 18px;
         /* identical to box height, or 129% */
-        color: #FFFFFF;
+        cursor: pointer;
 
-        span {
-          padding: 0 0 0 5px;
+        a.user-link {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          font-family: Poppins, sans-serif;
+          font-style: normal;
+          font-weight: normal;
+          font-size: 14px;
+          line-height: 18px;
+          color: #FFFFFF;
+
+
+          span {
+            padding: 0 0 0 5px;
+          }
         }
+
+
       }
 
       .bell {
+        cursor: pointer;
+
         .bell-btn {
           position: relative;
 
@@ -101,6 +110,30 @@
             position: absolute;
             padding: 1px 4px;
             background: #C84F4F;
+            color: #FFFFFF;
+            border-radius: 50%;
+            font-family: Poppins, sans-serif;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 10px;
+            line-height: 15px;
+            bottom: 0;
+            right: -11px;
+          }
+        }
+      }
+
+      .chat {
+        cursor: pointer;
+        margin-right: 22px;
+
+        .chat-btn {
+          position: relative;
+
+          span {
+            position: absolute;
+            padding: 1px 4px;
+            background: #239C3D;;
             color: #FFFFFF;
             border-radius: 50%;
             font-family: Poppins, sans-serif;
@@ -140,6 +173,7 @@
       }
 
       .interview-btn {
+        padding: 13px 140px;
         width: 100%;
         border: 1px solid #FFFFFF;
         box-sizing: border-box;
