--- a/src/modules/Project/components/Project.scss
+++ b/src/modules/Project/components/Project.scss
@@ -88,9 +88,11 @@
       background: #FFFFFF;
       border-radius: 5px;
       padding: 16px 16px 41px 16px;
+      flex: 0 0 440px;
     }
 
     .project-info {
+      flex: 1 1 auto;
       padding-left: 34px;
 
       .description {
